chore: migrate npm scope to @wyre-technology

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@asachs01/autotask-node",
+  "name": "@wyre-technology/autotask-node",
   "version": "2.1.0",
   "description": "Production-ready Node.js SDK for Kaseya Autotask PSA REST API with 100% API coverage, TypeScript support, enterprise features, and comprehensive testing.",
   "type": "commonjs",
@@ -59,11 +59,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/asachs01/autotask-node.git"
+    "url": "git+https://github.com/wyre-technology/autotask-node.git"
   },
-  "homepage": "https://github.com/asachs01/autotask-node#readme",
+  "homepage": "https://github.com/wyre-technology/autotask-node#readme",
   "bugs": {
-    "url": "https://github.com/asachs01/autotask-node/issues"
+    "url": "https://github.com/wyre-technology/autotask-node/issues"
   },
   "keywords": [
     "autotask",
