--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           node-version: "20.x"
           registry-url: "https://npm.pkg.github.com"
-          scope: "@asachs01"
+          scope: "@wyre-technology"
 
       - name: Install dependencies
         run: npm clean-install
